--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
 
 .App {
@@ -77,6 +79,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   margin-left: 1rem;
   flex-shrink: 0;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.task-btn:hover {
+  background-color: #6a44cc;
+  transform: translateY(-2px);
 }
 
 
@@ -111,16 +119,96 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   align-items: center;
 }
 
+
 .edit-icon,
 .delete-icon {
   cursor: pointer;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.edit-icon:hover,
+.delete-icon:hover {
+  color: #6a44cc; 
+  transform: scale(1.1); 
 }
 
 
 .fa-trash {
   margin-left: 0.75rem;
 }
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+
+.pagination button {
+  background-color: #8758ff;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0 0.5rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.pagination button:hover {
+  background-color: #6a44cc;
+  transform: translateY(-2px);
+}
+
+.pagination button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+  transform: none;
+}
+
+.pagination span {
+  color: white;
+  margin: 0 0.5rem;
+}
+
+
+
+.header {
+  background-color: #1A1A40;
+  padding: 10px 20px;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%; /* Make the header stretch across the full width */
+  box-sizing: border-box;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.info {
+  text-align: right;
+}
+
+.website-link {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s ease;
+}
+
+.website-link:hover {
+  color: #6a44cc; /* Change the color on hover */
+}
+
+
+
+
 
 
 
