--- a/src/App.css
+++ b/src/App.css
@@ -229,3 +229,54 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   }
 }
 
+.search {
+  width: 100%;
+  max-width: 400px;
+  padding: 10px 15px;
+  margin: 10px 0;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  outline: none;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+.search:focus {
+  border-color: #007BFF;
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.6);
+}
+
+.search::placeholder {
+  color: #aaa;
+  opacity: 0.8;
+}
+
+.task-actions {
+  display: flex;
+  align-items: center;
+}
+
+.edit-icon,
+.delete-icon,
+.calendar-icon {
+  cursor: pointer;
+  margin-left: 0.5rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.edit-icon:hover,
+.delete-icon:hover,
+.calendar-icon:hover {
+  color: #6a44cc; 
+  transform: scale(1.1); 
+}
+
+.fa-trash {
+  margin-left: 0.75rem;
+}
+
+.fa-calendar {
+  margin-left: 0.75rem; /* Adjust margin to match the other icons */
+}
+
